collapsing nav for small devices bug fixed

--- a/css/main.css
+++ b/css/main.css
@@ -86,6 +86,8 @@ h1, h2, h3, h4, h5, h6 {
 
 .nav-item {
   padding: 0 15px;
+  min-height: 40px !important;
+  max-height: 40px !important;
 }
 .nav-item:hover {
   background-color: #e2e2e2;
