--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -26,6 +26,8 @@
 
 .nav-item{
     padding: 0 15px;
+    min-height: 40px !important;
+    max-height: 40px !important;
     &:hover{
         background-color: $light;
         border-radius: 3px;
